--- a/utils/twitchname.html
+++ b/utils/twitchname.html
@@ -4,6 +4,7 @@
 <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script> 
 <script type="text/javascript">
 $(document).ready(function() {
+	h = document.location.hash;
 	url = "https://www.twitch.tv/"+h;
 	$('<iframe>', {
 	   src: url,
