--- a/_html/index.html
+++ b/_html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>🐯 🐯 🐯 🐯 🐯 </title>
+<title>matcha's website</title>
 </head>
 <body>
-<h1>🐯</h1>
+<h1>matcha's h1 tag</h1>
 </body>
 </html>
